# dlnad-rs

./: .gitignore  Cargo.toml  README.md  build.rs  dlnad_20260213.161625_macos_aarch64  dlnad_20260220.181948_macos_aarch64  dlnad_manager.py  requirements.txt  setup.py
src/: X_MS_MediaReceiverRegistrar.xml  get_sort_capabilities_response.xml  main.rs  meta_response_result.xml  rootDesc.xml
