[package]
name = "dlnad"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4" # Logging facade
env_logger = "0.11" # A logger implementation that uses environment variables
gethostname = "0.4" # To get the default hostname for advertising IP
uuid = { version = "1.0", features = ["v4", "serde"] }
shellexpand = "3.1"
clap = { version = "4", features = ["derive", "env"] }
local-ip-address = "0.5"
mp4ameta = "0.13"
dns-lookup = "3.0.1"
